--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -334,7 +334,7 @@ workflows:
           vpc-id: vpc-0d23d243e8bff4415
           subnet-ids: "subnet-04caf1309c0ab8f94,subnet-06475e48c36b4aece,subnet-0895b7d4795fbb1f4"
           ssl-certificate-arn:  arn:aws:acm:us-east-1:705594574410:certificate/31f3f746-fd90-4c69-964d-091e8fa0cbfe
-          instance-type: t3a.large
+          instance-type: c6a.2xlarge
           domain: "whocanivotefor.co.uk"
           requires:
           - build_and_test
@@ -355,7 +355,7 @@ workflows:
           dc-environment: production
           min-size: 1
           max-size: 20
-          desired-capacity: 1
+          desired-capacity: 5
           requires:
           - build_and_test
           - sam_deploy_staging
