--- a/sam-template.yaml
+++ b/sam-template.yaml
@@ -151,7 +151,7 @@ Resources:
         ImportNationalParties:
           Type: Schedule
           Properties:
-            Schedule: rate(1 day)
+            Schedule: cron(0 */6 * * *) # every 6 hours
             Name: import-national-parties
             Description: Import national parties
             Input: '{"command": "import_national_parties"}'
